[project]
name = "minigalaxy"
description = "A simple GOG Linux client"
version = "1.4.1"
authors = [
    { name = "Wouter Wijsman", email = "wwijsman@live.nl" }
]
dependencies = [
    "PyGObject",
    "requests"
]
dynamic= [
    "keywords",
    "classifiers",
    "urls",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
